--- a/debian/control
+++ b/debian/control
@@ -5,13 +5,28 @@ Maintainer: KERN packaging <packaging@kernsuite.info>
 Build-Depends: debhelper (>=9),
                dh-python,
                python-all,
-               python-setuptools
+               python3-all,
+               python-setuptools,
+               python3-setuptools
 Standards-Version: 4.4.1
 Homepage: https://github.com/asottile/future-fstrings
 X-Python-Version: >= 2.7
+X-Python3-Version: >= 3.6
+
+Package: python3-future-fstrings
+Architecture: any
+Multi-Arch: foreign
+Depends: ${misc:Depends}, ${shlibs:Depends}, ${python3:Depends}
+Description: A backport of fstrings to python<3.6
+
+Package: python-future-fstrings
+Architecture: any
+Multi-Arch: foreign
+Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}, python-tokenize-rt
+Description: A backport of fstrings to python<3.6
 
 Package: future-fstrings
 Architecture: any
 Multi-Arch: foreign
-Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}, tokenize-rt
+Depends: ${misc:Depends}, ${shlibs:Depends}, python-future-fstrings
 Description: A backport of fstrings to python<3.6
