--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,12 @@ Source: future-fstrings
 Section: python
 Priority: optional
 Maintainer: KERN packaging <packaging@kernsuite.info>
-Build-Depends: debhelper (>=9),
+Build-Depends: debhelper (>=10),
                dh-python,
-               python-all,
                python3-all,
-               python-setuptools,
                python3-setuptools
-Standards-Version: 4.4.1
+Standards-Version: 4.5.0
 Homepage: https://github.com/asottile/future-fstrings
-X-Python-Version: >= 2.7
 X-Python3-Version: >= 3.6
 
 Package: python3-future-fstrings
@@ -19,14 +16,8 @@ Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends}, ${python3:Depends}
 Description: A backport of fstrings to python<3.6
 
-Package: python-future-fstrings
-Architecture: any
-Multi-Arch: foreign
-Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}, python-tokenize-rt
-Description: A backport of fstrings to python<3.6
-
 Package: future-fstrings
 Architecture: any
 Multi-Arch: foreign
-Depends: ${misc:Depends}, ${shlibs:Depends}, python-future-fstrings
+Depends: ${misc:Depends}, ${shlibs:Depends}, python3-future-fstrings
 Description: A backport of fstrings to python<3.6
